--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.9.1",
     "@react-navigation/stack": "^7.6.16",
-    "expo": "~54.0.31",
+    "expo": "^54.0.33",
     "expo-navigation-bar": "~5.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.16",
     "firebase": "^12.8.0",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
+    "react": "19.2.3",
+    "react-native": "^0.84.0",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-webview": "13.15.0",
     "react-native-youtube-bridge": "^2.1.4",
     "react-native-youtube-iframe": "^2.4.1"
